--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <br />
   <input type="file" id="imageLoader" accept="image/*" />
   <br />
-  <button id="saveBtn">💾 保存する（ファイル名が受取番号になります）</button>
+  <button id="saveBtn">💾 保存する</button>
   <p id="notice"></p>
 
   <div id="canvasWrapper">
