--- a/index.html
+++ b/index.html
@@ -84,6 +84,13 @@
   <br />
   <input type="file" id="imageLoader" accept="image/*" />
   <br />
+  <p id="reuploadNotice"
+     data-ja="※画像は何度でも選び直せます。"
+     data-en="※ You can re-select the image as many times as you like."
+     data-zh="※ 您可以多次重新选择图片。"
+     data-ko="※ 이미지는 언제든지 다시 선택할 수 있습니다."
+     data-vi="※ Bạn có thể chọn lại ảnh bao nhiêu lần cũng được。"
+     style="font-size: 12px; color: #666;"></p>
 
   <div id="canvasWrapper">
     <canvas id="mainCanvas" width="3508" height="2480"></canvas>
