--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         link.href = url;
         link.download = getTimestampBasedFileName().replace('.jpg', '.png'); // PNG拡張子に変更
         link.click();
-        document.getElementById('notice').textContent = '📸 PNG形式で保存しました！';
+        document.getElementById('notice').textContent = '注文フォームへ進んでください';
         document.getElementById('go-to-form').scrollIntoView({ behavior: 'smooth' });
       }, 'image/png'); // ← PNG形式を指定
     });
