--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
   <input type="file" id="imageLoader" accept="image/*" />
   <br />
   <p id="reuploadNotice"
-     data-ja="※ファイル画像は何度でも選び直せます。"
-     data-en="※ You can re-select the image as many times as you like."
-     data-zh="※ 您可以多次重新选择图片。"
-     data-ko="※ 이미지는 언제든지 다시 선택할 수 있습니다."
-     data-vi="※ Bạn có thể chọn lại ảnh bao nhiêu lần cũng được。"
+     data-ja="※ファイル画像は何度でも選び直せます。画像は指で動かせます。つまんで大きさを変え、2本の指で回します。"
+     data-en="※ You can re-select the image as many times as you like. Move the image with your finger. Pinch to zoom, two fingers to rotate."
+     data-zh="※ 您可以多次重新选择图片。用手指移动图片，捏合缩放，两指旋转。"
+     data-ko="※ 이미지는 언제든지 다시 선택할 수 있습니다.손가락으로 이미지 이동, 집어서 확대·축소, 두 손가락으로 회전."
+     data-vi="※ Bạn có thể chọn lại ảnh bao nhiêu lần cũng được. Dùng tay di chuyển ảnh, chụm để phóng to, hai ngón tay xoay."
      style="font-size: 12px; color: #666;"></p>
 
   <div id="canvasWrapper">
@@ -143,6 +143,14 @@
   </footer>
 
   <script>
+    const saveWarningTexts = {
+      ja: '⚠️ まだファイルが選ばれていません。うちわに使う画像を選んでください。',
+      en: '⚠️ No file selected yet. Please upload an image.',
+      zh: '⚠️ 尚未选择文件，请上传图片。',
+      ko: '⚠️ 아직 파일이 선택되지 않았습니다. 이미지를 업로드하세요.',
+      vi: '⚠️ Chưa chọn tệp. Vui lòng tải ảnh lên.',
+    };
+
     const saveInstructionsTexts = {
       ja: `※「uchiwa_20250726_xxx_xxx.png を保存しますか？」という表示が出たら<br>
     iPhoneをご利用の方は以下を参考にしてください<br>
@@ -249,6 +257,19 @@
 
     // ✅ PNG形式で保存
     document.getElementById('saveBtn').addEventListener('click', () => {
+      const noticeEl = document.getElementById('notice');
+
+      if (!uploadedImg) {
+        noticeEl.textContent = saveWarningTexts[currentLang] || saveWarningTexts['ja'];
+        noticeEl.style.color = 'red';
+
+        setTimeout(() => {
+          noticeEl.textContent = '';
+          noticeEl.style.color = 'green'; // 元に戻す
+        }, 3000);
+        return;
+      }
+
       canvas.toBlob(blob => {
         const link = document.createElement('a');
         const url = URL.createObjectURL(blob);
