--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <input type="file" id="imageLoader" accept="image/*" />
   <br />
   <p id="reuploadNotice"
-     data-ja="※ファイル画像は何度でも選び直せます。画像は指で動かせます。つまんで大きさを変え、2本の指で回します。"
+     data-ja="※ファイル画像は何度でも選び直せます。<br>画像は指で動かせます。つまんで大きさを変え、2本の指で回します。"
      data-en="※ You can re-select the image as many times as you like. Move the image with your finger. Pinch to zoom, two fingers to rotate."
      data-zh="※ 您可以多次重新选择图片。用手指移动图片，捏合缩放，两指旋转。"
      data-ko="※ 이미지는 언제든지 다시 선택할 수 있습니다.손가락으로 이미지 이동, 집어서 확대·축소, 두 손가락으로 회전."
