--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
   <label id="templateLabel" data-ja="うちわのデザインを選んでね👉" data-en="Choose a fan design👉" data-zh="请选择一个团扇设计👉" data-ko="부채 디자인을 선택하세요👉" data-vi="Chọn thiết kế quạt👉">うちわのデザインを選んでね👉</label>
   <select id="templateSelector">
     <option value="fan1-highres.png">無地</option>
-    <option value="fan2-highres.png">夏祭り</option>
-    <option value="fan3-highres.png">父の日</option>
+    <option value="fan2-highres.png">夏祭り①</option>
+    <option value="fan3-highres.png">夏祭り②</option>
   </select>
 
   <br />
