--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
       ko: '⚠️ 아직 파일이 선택되지 않았습니다. 이미지를 업로드하세요.',
       vi: '⚠️ Chưa chọn tệp. Vui lòng tải ảnh lên.',
     };
-
+    
+    let currentLang = 'ja'; // デフォルトは日本語
+    
     const canvas = document.getElementById('mainCanvas');
     const ctx = canvas.getContext('2d');
     let uploadedImg = null;
