--- a/index.html
+++ b/index.html
@@ -162,6 +162,36 @@
       vi: '⚠️ Chưa chọn tệp. Vui lòng tải ảnh lên.',
     };
     
+
+    // 保存後のプレビュー案内（長押し保存）を多言語化
+    const previewNoticeTexts = {
+      ja: `
+        iPhone：画像を👆長押しして「“写真”に追加」を選んで保存してください。<br><br>
+        Android：画像を👆長押しして「画像を保存」を選択してください。<br><br>
+        保存できたら下の「注文フォームへ進む」ボタンから申込へお進みください。
+      `,
+      en: `
+        iPhone: 👆 Long-press the image and choose "Add to Photos" to save.<br><br>
+        Android: 👆 Long-press the image and choose "Save image".<br><br>
+        After saving, proceed via the "Go to order form" button below.
+      `,
+      zh: `
+        iPhone：👆长按图片，选择“添加到照片”保存。<br><br>
+        Android：👆长按图片，选择“保存图片”。<br><br>
+        保存后请点击下方“前往订单表单”继续。
+      `,
+      ko: `
+        iPhone: 이미지를 👆길게 눌러 “사진에 추가”를 선택해 저장하세요.<br><br>
+        Android: 이미지를 👆길게 눌러 “이미지 저장”을 선택하세요.<br><br>
+        저장이 끝나면 아래 “주문 폼으로 이동” 버튼으로 진행하세요.
+      `,
+      vi: `
+        iPhone: 👆 Nhấn giữ ảnh rồi chọn “Thêm vào Ảnh” để lưu.<br><br>
+        Android: 👆 Nhấn giữ ảnh rồi chọn “Lưu hình ảnh”.<br><br>
+        Sau khi lưu, bấm “Tiến tới form đặt hàng” bên dưới.
+      `
+    };
+
     let currentLang = 'ja'; // デフォルトは日本語
     
     const canvas = document.getElementById('mainCanvas');
@@ -283,11 +313,7 @@ document.getElementById('saveBtn').addEventListener('click', () => {
     previewWrapper.style.display = 'block';
 
     const previewNotice = document.getElementById('previewNotice');
-    previewNotice.innerHTML = `
-      iPhone：画像を👆長押しして「“写真”に追加」を選んで保存してください。<br><br>
-      Android：画像を👆長押しして「画像を保存」を選択してください。<br><br>
-      保存できたら下の「注文フォームへ進む」ボタンから申込へお進みください。
-    `;
+    previewNotice.innerHTML = previewNoticeTexts[currentLang] || previewNoticeTexts['ja'];
 
     // スクロールして目立たせる
     previewWrapper.scrollIntoView({ behavior: 'smooth' });
