--- a/index.html
+++ b/index.html
@@ -110,21 +110,11 @@
   <input type="file" id="imageLoader" accept="image/*" />
   <br />
   <p id="reuploadNotice"
-     data-ja="※スマホに入っている写真や、今カメラで撮った写真もOK！<br>
-     高解像度でA4サイズのうちわが簡単に作れます。<br>
-     画像は何度でも選び直せます。指で動かし、大きさや角度も自由に調整できます。"
-     data-en="※ You can use photos already on your phone or take a new one with your camera!<br>
-     Easily create a high-resolution A4-size fan.<br>
-     You can re-select the image anytime, move it with your finger, and freely adjust size and angle."
-     data-zh="※ 您可以使用手机里的照片，或直接拍照！<br>
-     轻松制作高清A4尺寸的团扇。<br>
-     可以随时重新选择图片，用手指移动、调整大小和角度。"
-     data-ko="※ 휴대폰에 있는 사진이나 지금 찍은 사진 모두 사용 가능!<br>
-     고해상도 A4 사이즈 부채를 쉽게 만들 수 있습니다.<br>
-     이미지는 언제든지 다시 선택 가능하며, 손가락으로 이동·크기·각도를 조정할 수 있습니다."
-     data-vi="※ Bạn có thể dùng ảnh trong điện thoại hoặc chụp mới bằng camera!<br>
-     Dễ dàng tạo quạt giấy kích thước A4 với độ phân giải cao.<br>
-     Có thể chọn lại ảnh bất cứ lúc nào, di chuyển, phóng to/thu nhỏ và xoay bằng ngón tay."
+     data-ja="※ファイル画像は何度でも選び直せます。<br>画像は指で動かせます。つまんで大きさを変え、2本の指で回します。"
+     data-en="※ You can re-select the image as many times as you like. Move the image with your finger. Pinch to zoom, two fingers to rotate."
+     data-zh="※ 您可以多次重新选择图片。用手指移动图片，捏合缩放，两指旋转。"
+     data-ko="※ 이미지는 언제든지 다시 선택할 수 있습니다.손가락으로 이미지 이동, 집어서 확대·축소, 두 손가락으로 회전."
+     data-vi="※ Bạn có thể chọn lại ảnh bao nhiêu lần cũng được. Dùng tay di chuyển ảnh, chụm để phóng to, hai ngón tay xoay."
      style="font-size: 12px; color: #666;"></p>
 
   <div id="canvasWrapper">
