--- a/index.html
+++ b/index.html
@@ -107,21 +107,7 @@
   </select>
 
   <br />
-  <!-- 📷 見た目ボタン -->
-  <label for="imageLoader" style="
-    display:inline-block;
-    padding:10px 18px;
-    background-color:#4CAF50;
-    color:#fff;
-    font-size:16px;
-    border-radius:8px;
-    cursor:pointer;
-  ">
-  📷 写真を撮る／ライブラリから選ぶ
-  </label>
-
-  <!-- 実際のファイル入力（非表示） -->
-  <input type="file" id="imageLoader" accept="image/*" capture="environment" style="display:none;" />
+  <input type="file" id="imageLoader" accept="image/*" />
   <br />
   <p id="reuploadNotice"
      data-ja="※ファイル画像は何度でも選び直せます。<br>画像は指で動かせます。つまんで大きさを変え、2本の指で回します。"
