--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
     #go-to-form:active {
       transform: scale(0.96);
     }
+
+    #templateLabel {
+      font-size: 18px;  /* ←ここでサイズ変更 */
+      font-weight: bold; /* 太字にしたい場合 */
+      }
   </style>
 </head>
 <body>
@@ -129,7 +134,7 @@
     <canvas id="mainCanvas" width="3508" height="2480"></canvas>
   </div>
 
-  <button id="saveBtn">📷決定</button>
+  <button id="saveBtn">✨ 完成！</button>
   <p id="notice"></p>
 
 
