--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <canvas id="mainCanvas" width="3508" height="2480"></canvas>
   </div>
 
-  <button id="saveBtn">✨ 完成！</button>
+  <button id="saveBtn">決定 → プレビュー</button>
   <p id="notice"></p>
 
 
