--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       background: #ff9800; /* オレンジ */
       color: #fff;
       border-radius: 30px;
-      padding: 12px 20px;
+      padding: 10px 18px;
       cursor: pointer;
       font-size: 18px;
       transition: 0.2s;
@@ -28,7 +28,7 @@
       }
     #customFileLabel:hover {
       background: #e67e22; /* 濃いオレンジに変化 */
-      transform: scale(1.05);
+      transform: scale(3.05);
     }
 
 
@@ -166,7 +166,7 @@
 
   <!-- 変更後 -->
   <label for="imageLoader" id="customFileLabel">
-    📷 写真を撮る／ライブラリから選ぶ
+    写真を撮る／ライブラリから選ぶ
   </label>
 
   <input type="file" id="imageLoader" accept="image/*" style="display:none;" />
